# garage

FreeBSD/: cshrc  screenrc
code/Java/hiChannel_wmv/: build.xml
code/Java/hiChannel_wmv/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
code/Java/hiChannel_wmv/nbproject/private/: private.properties
code/Java/hiChannel_wmv/src/hichannel_wmv/: Get.java  HiChannel_wmvApp.java  HiChannel_wmvView.form  HiChannel_wmvView.java
code/Java/hiChannel_wmv/src/hichannel_wmv/resources/: HiChannel_wmvApp.properties  HiChannel_wmvView.properties
code/cpp/xor_src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xor.cpp  xor.h  xor.pro
code/mathcha/: mathcha.php
code/other/autoBuild/: Readme.md
code/other/autoBuild/autoTools/: Makefile.am  README  configure.ac  main.c
code/other/autoBuild/cmake/: CMakeLists.txt  README  main.c
code/php/mo_gTranslate/: translate.php
code/php/php_google_chart/: chart.php
ubuntu/env-install/: install.sh
windows/kaspersky_reg_delete/: delete.reg
