#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(HelloWorld, 0.1, zero@some.where)
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

# automake integration
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# files to generate
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
